[FIX] mail: improve attachment style slightly
PR https://github.com/odoo/odoo/pull/200099 improve visual
of attachments.

This commit makes a few adjustments to the style:
- proper spacing between items, using `.gap`, so that it
  works in all contexts without unwanted extra spacing
- overlay color is readable in dark theme
- a bit more rounded so it looks more pleasing
- improved alignment of overlay items
- reduced opacity of file size for better difference
  with filename
- properly truncate filename overlay to 2 lines max

closes odoo/odoo#209019

X-original-commit: ac9c39527948b6592486824ff52a59af4972c3ef
Related: odoo/enterprise#84985

--- a/addons/mail/static/src/core/common/attachment_list.scss
+++ b/addons/mail/static/src/core/common/attachment_list.scss
@@ -13,6 +13,25 @@
     height: 1.4em;
 }
 
+.o-mail-AttachmentButtons button:hover {
+    filter: brightness(.95);
+}
+
+.o-mail-Attachment-hover {
+    background: $gray-100;
+
+    &.o-image {
+        background: rgba(0, 0, 0, 0.4);
+    }
+}
+
+.o-mail-Attachment-hoverImageText {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-height: 1.25;
+}
+
 .o-viewable {
     cursor: zoom-in;
 }
